appId: com.bridgething.gateway
---
- runFlow: fresh-start.yaml
- tapOn: ".*dev gateway.*"
- scrollUntilVisible:
    element: ".*install updates automatically.*"
    direction: DOWN
    centerElement: true
    visibilityPercentage: 100
- tapOn: ".*install updates automatically.*"
- scrollUntilVisible:
    element:
      id: "update-host"
    direction: DOWN
    centerElement: true
    visibilityPercentage: 100
- tapOn:
    id: "update-host"
- inputText: "http://${FIXTURE_HOST}:${FIXTURE_PORT}/m/${MODE}"
- pressKey: Enter
- tapOn: "apps"
- tapOn: "apps"
